# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: lint_check.yml
formats/: json.py  plain.py  stylish.py
gendiff/: __init__.py  diff.py  parsing.py  stylish.py
gendiff/scripts/: gendiff.py  parsing.py
tests/: test_gendiff.py
tests/fixtures/: file1.json  file1.yml  file2.json  file2.yml  result.json
